# github_actions_analyzer

./: .gitignore  README.md  pyproject.toml
github_actions_analyzer/: main.py
github_actions_analyzer/preprocessing/: load.py  load_dump.py  preprocess.py
github_actions_analyzer/statistics/: statistics.py  utils.py
github_actions_analyzer/visualizer/: visualize.py
misc/: extract_files.sh
tests/: test_get_duplication.py  test_get_frequency.py  test_get_probability.py  test_non_nan_count.py
tests/gaa-test-data/0/: gradle.yml
tests/gaa-test-data/1003/: pypi.yml
tests/gaa-test-data/1005/: npmjs.yml
tests/gaa-test-data/1029/: maven.yml
tests/gaa-test-data/107/: ci.yml
tests/gaa-test-data/1086/: ruby.yml
tests/gaa-test-data/1122/: blank.yml
tests/gaa-test-data/1145/: pages.yml
tests/gaa-test-data/1176/: test.yml
tests/gaa-test-data/1189/: build.yml
tests/gaa-test-data/1245/: ci.yml
tests/gaa-test-data/1253/: devskim.yml
tests/gaa-test-data/127/: workflow.yml
tests/gaa-test-data/1310/: tests.yml
tests/gaa-test-data/1358/: push.yml
tests/gaa-test-data/137/: ci.yml
tests/gaa-test-data/1383/: maven.yml
tests/gaa-test-data/1392/: maven.yml
tests/gaa-test-data/1406/: php.yml
tests/gaa-test-data/1409/: go.yml
tests/gaa-test-data/141/: ci.yml
tests/gaa-test-data/1420/: scape.yml
tests/gaa-test-data/1471/: jekyll.yml
tests/gaa-test-data/1509/: main.yml
tests/gaa-test-data/1566/: flawfinder.yml
tests/gaa-test-data/1582/: linting.yml
tests/gaa-test-data/1602/: publish.yml
tests/gaa-test-data/1604/: actions.yml
(+227 files in other folders)
