# pyproject.tomlのビルドツールを指定します。
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# プロジェクトの設定を書きます。
[project]
name = "github_actions_analyzer"
version = "0.0.1"
description = "GitHub Actions Workflow File Analyzer"
requires-python = ">=3.10"
authors = [{ name = "mkybdev" }]
# 依存関係も書けます。
dependencies = [
    'appdirs',
    'tqdm',
    'pandas',
    'IPython',
    'matplotlib',
    'seaborn',
    'scikit-learn',
    'pyvis',
    'PyYAML',
    'yamlcore',
]
# インストール時のコマンドを書きます。
[project.scripts]
github_actions_analyzer = "github_actions_analyzer.main:main"

# どのフォルダをモジュールとして扱うかを書きます。
[tool.setuptools]
py-modules = ['github_actions_analyzer']